--- a/css/new_resume.css
+++ b/css/new_resume.css
@@ -217,10 +217,11 @@ p {
 }
 
 .sub img{
-    vertical-align: middle; /* 텍스트와 수직 정렬 */
-    margin-right: 5px; /* 이미지 오른쪽 여백 설정 */
-    width: 20px; /* 이미지 너비 설정 */
-    height: 20px; /* 이미지 높이 설정 */
+    vertical-align: middle; 
+    margin-right: 20px;
+    margin-bottom: 5px;
+    width: 25px; 
+    height: 23px; 
 }
 
 .edu-header{
